--- a/buddypress.pot
+++ b/buddypress.pot
@@ -1161,7 +1161,7 @@ msgstr ""
 #: bp-core/admin/bp-core-admin-settings.php:267
 #: bp-core/admin/bp-core-admin-slugs.php:24
 #: bp-core/classes/class-bp-admin.php:732
-msgid "BuddyPress Settings"
+msgid "BuddyBoss Settings"
 msgstr ""
 
 #: bp-core/admin/bp-core-admin-components.php:26
